# kaggle-lead-scoring-v3-data-analysis-modeling-and-cloud-deployment

./: .gitignore  Dockerfile  EDA.ipynb  README.md  crosstab.txt  debug_eda.py  eda_output.txt  generate_eda.py  main.py  predict.py  pyproject.toml  train.py
models/: pipeline.pkl
