[project]
name = "kaggle-lead-scoring-v3-data-analysis-modeling-and-cloud-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.1",
    "jupyter>=1.1.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.3",
]
